#156 - Detached mode for devtools window (#207)
#229 - Detached window mode for devtools